[workspace]
resolver = "2"
members = ["contracts/*", "packages/*"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
cosmwasm-std = "3.0.2"
neutron-std = { git = "https://github.com/neutron-org/neutron-std", branch = "feat/cosmwasm-3" }
cosmwasm-schema = { version = "3.0.2", default-features = false }
cw2 = "3.0.0"
cw-storage-plus = "3.0.1"
schemars = "0.8.15"
serde = { version = "1.0.188", default-features = false }
serde-json-wasm = "1.0.1"
base64 = "0.21.7"
prost = "0.12.3"
prost-types = "0.12.1"
cosmos-sdk-proto = { version = "0.20.0", default-features = false }
bech32 = "0.9.1"
thiserror = "1.0.49"
protobuf = "~3.3.0"
hex = "0.4.3"
serde_json = { version = "1.0.87" }
tendermint-proto = "0.34.1"
speedate = "0.13.0"
