[package]
description = "This package is a modified copy of the osmosis package - https://github.com/osmosis-labs/osmosis-rust/tree/main/packages/proto-build"
authors = ["Supanat Potiwarakorn <boss@osmosis.team>", "Justin Kilpatrick <justin@althea.net>", "Tony Arcieri <tony@iqlusion.io>"]
edition = "2021"
name = "proto-build"
publish = false
version = "0.1.0"

[dependencies]
heck = "0.4.0"
itertools = "0.10.3"
log = "0.4.17"
pretty_env_logger = "0.4.0"
prettyplease = "0.1.16"
proc-macro2 = "1.0.52"
prost = "0.12"
prost-build = "0.12"
prost-types = { workspace = true }
quote = "1.0.26"
regex = "1"
syn = {version = "1.0.98", features = ["full", "parsing", "extra-traits"]}
tonic = "0.10"
tonic-build = "0.10"
walkdir = "2"
