[package]
name = "band-feed"
version = "0.1.0"
authors = ["nhpd <dmitry.klpv@gmail.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
cosmwasm-schema = "1.1.3"
cosmwasm-std = "1.1.3"
cosmwasm-storage = "1.1.3"
cw-storage-plus = "0.15.1"
cw2 = "0.15.1"
cw-band = "0.1.0-alpha.2"
neutron-sdk = { path = "../../packages/neutron-sdk", default-features = false, version = "0.1.0"}
base64 = "0.13.0"
protobuf = { version = "3.2.0", features = ["with-bytes"] }
prost = "0.11"
prost-types = "0.11"
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
cosmos-sdk-proto = { version = "0.14.0", default-features = false }
thiserror = { version = "1.0.31" }
# FIXME: find normal lib or git path
#obi = { path = "../../../github.com/obi-rs/obi" }
obi = "0.0.2"
owasm-kit = "0.3.0"
strum = "0.24.1"
strum_macros = "0.24.3"

[dev-dependencies]
cw-multi-test = "0.15.1"
