[package]
name = "neutron_interchain_queries"
version = "0.1.0"
authors = ["pr0n00gler <misha.m@p2p.org>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
interface = ["dep:cw-orch"]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { version = "1.2.0", features = ["staking"] }
cw2 = "0.15.1"
cw721-base = "0.18.0"
schemars = "0.8.10"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
neutron-sdk = { path = "../../packages/neutron-sdk", default-features = false, version = "0.6.0"}
base64 = "0.13.0"
cosmos-sdk-proto = { version = "0.14.0", default-features = false, features=["cosmwasm"] }
cw-storage-plus = { version = "0.14.0", features = ["iterator"]}
prost = "0.11"
serde-json-wasm = "0.4.1"
cosmwasm-schema = { version = "1.2.0", default-features = false }
bech32 = "0.9.1"
cw0 = "0.10.3"
cw721 = "0.18.0"
cw-orch = { version = "0.13.3", optional = true, features=["daemon"] }


[dev.dependencies]
cw-orch = { version = "0.13.3", features=["daemon"] }

[dev-dependencies]
tokio = "1.29.1"
