[package]
name = "neutron_interchain_queries"
version = "0.1.0"
authors = ["pr0n00gler <misha.m@p2p.org>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cw2 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
neutron-sdk = { path = "../../packages/neutron-sdk", default-features = false }
cosmos-sdk-proto = { workspace = true }
cw-storage-plus = { workspace = true }
serde-json-wasm = { workspace = true }
prost-types = { workspace = true }
cosmwasm-schema = { workspace = true }
# TODO: use workspace everywhere?
neutron-std = { git = "https://github.com/neutron-org/neutron-std", rev = "cc49ece967353bcae7ad29ce04f75d2cc167b028" }

[dev-dependencies]
base64 = { workspace = true }
